temp commit start/stop (not working)

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -2,11 +2,15 @@
 <html>
 
     <head>
+        <script src="../lib/jquery-2.2.0.js"></script>
+        <script src="./popup.js"></script>
+        <link rel="stylesheet" href="popup.css">
         <title>AutoReply</title>
     </head>
 
     <body>
-        
+        <input id="start" type="button" value="Start" />
+        <input id="pause" type="button" value="Pause" />
     </body>
 
 </html>
